--- a/packages/deploy/src/data/deploy/ethereum-v1.5-pendle/config.json
+++ b/packages/deploy/src/data/deploy/ethereum-v1.5-pendle/config.json
@@ -14,21 +14,9 @@
       "assertDecimals": 18
     },
     {
-      "id": "pt-lbtc-27mar2025",
-      "address": "0xEc5a52C685CC3Ad79a6a347aBACe330d69e0b1eD",
-      "assertSymbol": "PT-LBTC-27MAR2025",
-      "assertDecimals": 8
-    },
-    {
-      "id": "lbtc",
-      "address": "0x8236a87084f8B84306f72007F36F2618A5634494",
-      "assertSymbol": "LBTC",
-      "assertDecimals": 8
-    },
-    {
-      "id": "pt-weeth-26dec2024",
-      "address": "0x6ee2b5e19ecba773a352e5b21415dc419a700d1d",
-      "assertSymbol": "PT-weETH-26DEC2024",
+      "id": "weeth",
+      "address": "0xCd5fE23C85820F7B72D0926FC9b05b43E359b7ee",
+      "assertSymbol": "weETH",
       "assertDecimals": 18
     },
     {
@@ -38,39 +26,15 @@
       "assertDecimals": 18
     },
     {
-      "id": "ebtc",
-      "address": "0x657e8C867D8B37dCC18fA4Caead9C45EB088C642",
-      "assertSymbol": "eBTC",
-      "assertDecimals": 8
-    },
-    {
-      "id": "pt-ebtc-27mar2025",
-      "address": "0x44a7876ca99460ef3218bf08b5f52e2dbe199566",
-      "assertSymbol": "PT-corn-eBTC-27MAR2025",
-      "assertDecimals": 8
-    },
-    {
-      "id": "weeth",
-      "address": "0xCd5fE23C85820F7B72D0926FC9b05b43E359b7ee",
-      "assertSymbol": "weETH",
+      "id": "pt-ageth-26jun2025",
+      "address": "0x6e43f6abce001c14c7115d20908d0c272338eaf1",
+      "assertSymbol": "PT-agETH-26JUN2025",
       "assertDecimals": 18
     },
     {
-      "id": "pt-rsweth-26dec2024",
-      "address": "0x2048e9a6fee232056580d95e10b30f14f0ee578b",
-      "assertSymbol": "PT-rswETH-26DEC2024",
-      "assertDecimals": 18
-    },
-    {
-      "id": "pt-rsweth-26jun2025",
-      "address": "0x003984ecc30bafe364efa8c0112cdd94b8216406",
-      "assertSymbol": "PT-rswETH-26JUN2025",
-      "assertDecimals": 18
-    },
-    {
-      "id": "rsweth",
-      "address": "0xfae103dc9cf190ed75350761e95403b7b8afa6c0",
-      "assertSymbol": "rswETH",
+      "id": "ageth",
+      "address": "0xe1b4d34e8754600962cd944b535180bd758e6c2e",
+      "assertSymbol": "agETH",
       "assertDecimals": 18
     }
   ],
@@ -82,30 +46,16 @@
       "pendlePtLpOracle": "0x66a1096C6366b2529274dF4f5D8247827fe4CEA8",
       "settings": [
         {
-          "quoteTokenId": "lbtc",
-          "baseTokenId": "pt-lbtc-27mar2025",
-          "pendleMarket": "0x70b70ac0445c3ef04e314dfda6caafd825428221",
-          "secondsAgo": "30 min",
-          "secondsAgoLiquidation": "5 sec"
-        },
-        {
-          "quoteTokenId": "ebtc",
-          "baseTokenId": "pt-ebtc-27mar2025",
-          "pendleMarket": "0x2c71ead7ac9ae53d05f8664e77031d4f9eba064b",
-          "secondsAgo": "30 min",
-          "secondsAgoLiquidation": "5 sec"
-        },
-        {
           "quoteTokenId": "weeth",
-          "baseTokenId": "pt-weeth-26dec2024",
-          "pendleMarket": "0x7d372819240d14fb477f17b964f95f33beb4c704",
+          "baseTokenId": "pt-weeth-26jun2025",
+          "pendleMarket": "0xf4cf59259d007a96c641b41621ab52c93b9691b1",
           "secondsAgo": "30 min",
           "secondsAgoLiquidation": "5 sec"
         },
         {
-          "quoteTokenId": "rsweth",
-          "baseTokenId": "pt-rsweth-26dec2024",
-          "pendleMarket": "0x7c7fbb2d11803c35aa3e283985237ad27f64406b",
+          "quoteTokenId": "ageth",
+          "baseTokenId": "pt-ageth-26jun2025",
+          "pendleMarket": "0xbe8549a20257917a0a9ef8911daf18190a8842a4",
           "secondsAgo": "30 min",
           "secondsAgoLiquidation": "5 sec"
         }
@@ -120,57 +70,25 @@
   },
   "marginlyPools": [
     {
-      "id": "pt-lbtc-27mar2025-lbtc",
-      "baseTokenId": "pt-lbtc-27mar2025",
-      "quoteTokenId": "lbtc",
-      "priceOracleId": "pendleMarketOracle",
-      "defaultSwapCallData": "20447233",
-      "params": {
-        "interestRate": "0.3%",
-        "maxLeverage": "20",
-        "swapFee": "0%",
-        "fee": "0%",
-        "mcSlippage": "1%",
-        "positionMinAmount": "0.00002",
-        "quoteLimit": "50"
-      }
-    },
-    {
-      "id": "pt-ebtc-27mar2025-ebtc",
-      "baseTokenId": "pt-ebtc-27mar2025",
-      "quoteTokenId": "ebtc",
-      "priceOracleId": "pendleMarketOracle",
-      "defaultSwapCallData": "20447233",
-      "params": {
-        "interestRate": "0.3%",
-        "maxLeverage": "20",
-        "swapFee": "0%",
-        "fee": "0%",
-        "mcSlippage": "1%",
-        "positionMinAmount": "0.00002",
-        "quoteLimit": "50"
-      }
-    },
-    {
-      "id": "pt-weeth-26dec2024-weeth",
-      "baseTokenId": "pt-weeth-26dec2024",
+      "id": "pt-weeth-26jun2025-weeth",
+      "baseTokenId": "pt-weeth-26jun2025",
       "quoteTokenId": "weeth",
       "priceOracleId": "pendleMarketOracle",
       "defaultSwapCallData": "20447233",
       "params": {
-        "interestRate": "0.4%",
+        "interestRate": "0.3%",
         "maxLeverage": "20",
         "swapFee": "0%",
         "fee": "0%",
-        "mcSlippage": "1.0%",
-        "positionMinAmount": "0.001",
-        "quoteLimit": "10000"
+        "mcSlippage": "1%",
+        "positionMinAmount": "0.002",
+        "quoteLimit": "200"
       }
     },
     {
-      "id": "pt-rsweth-26dec2024-rsweth",
-      "baseTokenId": "pt-rsweth-26dec2024",
-      "quoteTokenId": "rsweth",
+      "id": "pt-ageth-26jun2025-ageth",
+      "baseTokenId": "pt-ageth-26jun2025",
+      "quoteTokenId": "ageth",
       "priceOracleId": "pendleMarketOracle",
       "defaultSwapCallData": "20447233",
       "params": {
@@ -178,9 +96,9 @@
         "maxLeverage": "20",
         "swapFee": "0%",
         "fee": "0%",
-        "mcSlippage": "1.0%",
-        "positionMinAmount": "0.001",
-        "quoteLimit": "1000"
+        "mcSlippage": "1%",
+        "positionMinAmount": "0.002",
+        "quoteLimit": "200"
       }
     }
   ],
@@ -190,28 +108,16 @@
       "adapterName": "PendleMarketAdapter",
       "pools": [
         {
-          "poolAddress": "0x70b70ac0445c3ef04e314dfda6caafd825428221",
+          "poolAddress": "0xf4cf59259d007a96c641b41621ab52c93b9691b1",
           "slippage": "35",
-          "tokenAId": "pt-lbtc-27mar2025",
-          "tokenBId": "lbtc"
-        },
-        {
-          "poolAddress": "0x2c71ead7ac9ae53d05f8664e77031d4f9eba064b",
-          "slippage": "35",
-          "tokenAId": "pt-ebtc-27mar2025",
-          "tokenBId": "ebtc"
-        },
-        {
-          "poolAddress": "0x7d372819240d14fb477f17b964f95f33beb4c704",
-          "slippage": "35",
-          "tokenAId": "pt-weeth-26dec2024",
+          "tokenAId": "pt-weeth-26jun2025",
           "tokenBId": "weeth"
         },
         {
-          "poolAddress": "0x7c7fbb2d11803c35aa3e283985237ad27f64406b",
+          "poolAddress": "0xbe8549a20257917a0a9ef8911daf18190a8842a4",
           "slippage": "35",
-          "tokenAId": "pt-rsweth-26dec2024",
-          "tokenBId": "rsweth"
+          "tokenAId": "pt-ageth-26jun2025",
+          "tokenBId": "ageth"
         }
       ]
     }
