--- a/packages/deploy/src/data/deploy/ethereum-v1.5-pendle/config.json
+++ b/packages/deploy/src/data/deploy/ethereum-v1.5-pendle/config.json
@@ -14,49 +14,49 @@
       "assertDecimals": 18
     },
     {
-      "id": "weeth",
-      "address": "0xCd5fE23C85820F7B72D0926FC9b05b43E359b7ee",
-      "assertSymbol": "weETH",
-      "assertDecimals": 18
+      "id": "ebtc",
+      "address": "0x657e8c867d8b37dcc18fa4caead9c45eb088c642",
+      "assertSymbol": "eBTC",
+      "assertDecimals": 8
     },
     {
-      "id": "pt-weeth-26jun2025",
-      "address": "0xef6122835a2bbf575d0117d394fda24ab7d09d4e",
-      "assertSymbol": "PT-weETH-26JUN2025",
-      "assertDecimals": 18
+      "id": "wbtc",
+      "address": "0x2260fac5e5542a773aa44fbcfedf7c193bc2c599",
+      "assertSymbol": "WBTC",
+      "assertDecimals": 8
     },
     {
-      "id": "pt-ageth-26jun2025",
-      "address": "0x6e43f6abce001c14c7115d20908d0c272338eaf1",
-      "assertSymbol": "PT-agETH-26JUN2025",
-      "assertDecimals": 18
-    },
-    {
-      "id": "ageth",
-      "address": "0xe1b4d34e8754600962cd944b535180bd758e6c2e",
-      "assertSymbol": "agETH",
-      "assertDecimals": 18
+      "id": "pt-ebtc-27mar2025",
+      "address": "0x44a7876ca99460ef3218bf08b5f52e2dbe199566",
+      "assertSymbol": "PT-corn-eBTC-27MAR2025",
+      "assertDecimals": 8
     }
   ],
   "prices": [],
   "priceOracles": [
     {
-      "id": "pendleMarketOracle",
-      "type": "pendleMarket",
+      "id": "curve-oracle",
+      "type": "curve",
+      "settings": [
+        {
+          "pool": "0x7704d01908afd31bf647d969c295bb45230cd2d6",
+          "quoteTokenId": "wbtc",
+          "baseTokenId": "ebtc"
+        }
+      ]
+    },
+    {
+      "id": "pendleOracle",
+      "type": "pendle",
       "pendlePtLpOracle": "0x66a1096C6366b2529274dF4f5D8247827fe4CEA8",
       "settings": [
         {
-          "quoteTokenId": "weeth",
-          "baseTokenId": "pt-weeth-26jun2025",
-          "pendleMarket": "0xf4cf59259d007a96c641b41621ab52c93b9691b1",
-          "secondsAgo": "30 min",
-          "secondsAgoLiquidation": "5 sec"
-        },
-        {
-          "quoteTokenId": "ageth",
-          "baseTokenId": "pt-ageth-26jun2025",
-          "pendleMarket": "0xbe8549a20257917a0a9ef8911daf18190a8842a4",
-          "secondsAgo": "30 min",
+          "quoteTokenId": "wbtc",
+          "baseTokenId": "pt-ebtc-27mar2025",
+          "pendleMarket": "0x2c71ead7ac9ae53d05f8664e77031d4f9eba064b",
+          "secondaryPoolOracleId": "curve-oracle",
+          "ibTokenId": "ebtc",
+          "secondsAgo": "15 min",
           "secondsAgoLiquidation": "5 sec"
         }
       ]
@@ -70,54 +70,34 @@
   },
   "marginlyPools": [
     {
-      "id": "pt-weeth-26jun2025-weeth",
-      "baseTokenId": "pt-weeth-26jun2025",
-      "quoteTokenId": "weeth",
-      "priceOracleId": "pendleMarketOracle",
-      "defaultSwapCallData": "20447233",
+      "id": "pt-ebtc-27mar2025-wbtc",
+      "baseTokenId": "pt-ebtc-27mar2025",
+      "quoteTokenId": "wbtc",
+      "priceOracleId": "pendleOracle",
+      "defaultSwapCallData": "31981569",
       "params": {
         "interestRate": "0.3%",
         "maxLeverage": "20",
         "swapFee": "0%",
         "fee": "0%",
         "mcSlippage": "1%",
-        "positionMinAmount": "0.002",
-        "quoteLimit": "200"
-      }
-    },
-    {
-      "id": "pt-ageth-26jun2025-ageth",
-      "baseTokenId": "pt-ageth-26jun2025",
-      "quoteTokenId": "ageth",
-      "priceOracleId": "pendleMarketOracle",
-      "defaultSwapCallData": "20447233",
-      "params": {
-        "interestRate": "0.4%",
-        "maxLeverage": "20",
-        "swapFee": "0%",
-        "fee": "0%",
-        "mcSlippage": "1%",
-        "positionMinAmount": "0.002",
-        "quoteLimit": "200"
+        "positionMinAmount": "0.00015",
+        "quoteLimit": "50"
       }
     }
   ],
   "adapters": [
     {
-      "dexId": 19,
-      "adapterName": "PendleMarketAdapter",
+      "dexId": 30,
+      "adapterName": "PendleCurveNgAdapter",
       "pools": [
         {
-          "poolAddress": "0xf4cf59259d007a96c641b41621ab52c93b9691b1",
+          "pendleMarket": "0x2c71ead7ac9ae53d05f8664e77031d4f9eba064b",
           "slippage": "35",
-          "tokenAId": "pt-weeth-26jun2025",
-          "tokenBId": "weeth"
-        },
-        {
-          "poolAddress": "0xbe8549a20257917a0a9ef8911daf18190a8842a4",
-          "slippage": "35",
-          "tokenAId": "pt-ageth-26jun2025",
-          "tokenBId": "ageth"
+          "curveSlippage": "100",
+          "curvePool": "0x7704d01908afd31bf647d969c295bb45230cd2d6",
+          "ibTokenId": "ebtc",
+          "quoteTokenId": "wbtc"
         }
       ]
     }
