--- a/packages/keeper/config/config.arbitrum-one.json
+++ b/packages/keeper/config/config.arbitrum-one.json
@@ -14,22 +14,6 @@
   },
   "marginlyPools": [
     {
-      "keeperType": "balancer",
-      "description": "pt-weeth-27jun2024/weth",
-      "address": "0xcf848A30153506617B07207D2B3d054D4Fb72EBC",
-      "minProfitQuote": "0.0005",
-      "minProfitBase": "0.0005",
-      "swapCallData": "18350081"
-    },
-    {
-      "keeperType": "aave",
-      "description": "pt-usde-29aug2024/usdc",
-      "address": "0x79C37E226834Dc6BfB04Ba0b60f823515c32f50D",
-      "minProfitQuote": "1",
-      "minProfitBase": "0.00005",
-      "swapCallData": "18350081"
-    },
-    {
       "keeperType": "uniswapV3",
       "description": "knox/eusd",
       "address": "0x3125e87D2630eb7DADD7F94e2fE05Bd21eE10C4f",
@@ -55,46 +39,49 @@
       "minProfitBase": "0.5"
     },
     {
-      "keeperType": "balancer",
-      "description": "pt-ezeth-26sep2024/ezeth",
-      "address": "0x44579419E975f4d59eaA0876f2EdCA7F2531821A",
-      "swapCallData": "20447233",
-      "minProfitQuote": "0.0001",
-      "minProfitBase": "0.0001"
+      "keeperType": "uniswapV3",
+      "description": "pt-uniETH-26jun2025/weth",
+      "address": "0x8A048FdC480ADEc0C7A77277F398709AEa7e4461",
+      "flashLoanPools": ["0x641c00a822e8b671738d32a431a4fb6074e5c79d"],
+      "minProfitQuote": "0.001",
+      "minProfitBase": "0.001",
+      "swapCallData": "20447233"
     },
     {
       "keeperType": "uniswapV3",
-      "description": "pt-weeth-26sep2024/weeth",
-      "address": "0x3ad4F88aF401bf5F4F2fE35718139cacC82410d7",
-      "flashLoanPools": ["0x14353445c8329df76e6f15e9ead18fa2d45a8bb6"],
-      "swapCallData": "20447233",
-      "minProfitQuote": "0.0001",
-      "minProfitBase": "0.0001"
-    },
-    {
-      "keeperType": "balancer",
-      "description": "pt-rseth-26sep2024/rseth",
-      "address": "0x5ecE952A12b87f909b4Bd8137DD30fd07b80c2C4",
-      "swapCallData": "20447233",
-      "minProfitQuote": "0.0001",
-      "minProfitBase": "0.0001"
+      "description": "pt-rsETH-26jun2025/weth",
+      "address": "0x727B79bFd88600fa425619280bc24A0B60Cf14DA",
+      "flashLoanPools": ["0x641c00a822e8b671738d32a431a4fb6074e5c79d"],
+      "minProfitQuote": "0.001",
+      "minProfitBase": "0.001",
+      "swapCallData": "20447233"
     },
     {
       "keeperType": "uniswapV3",
-      "description": "pt-weeth-26dec2024/weeth",
-      "address": "0x2E70CC46F465ab249D6972cCeb0363a6B07AeA01",
-      "flashLoanPools": ["0x14353445c8329df76e6f15e9ead18fa2d45a8bb6"],
-      "swapCallData": "20447233",
-      "minProfitQuote": "0.0001",
-      "minProfitBase": "0.0001"
+      "description": "pt-weETH-26jun2025/weth",
+      "address": "0xe302CA50234D336A8Cff0AD11Af1Aa00C0F174e2",
+      "flashLoanPools": ["0x641c00a822e8b671738d32a431a4fb6074e5c79d"],
+      "minProfitQuote": "0.001",
+      "minProfitBase": "0.001",
+      "swapCallData": "20447233"
     },
     {
-      "keeperType": "reinit",
-      "description": "pt-unieth-26dec2024/unieth",
-      "address": "0x1be9c0343F6A5E3F1E8c76e6cEF05EEbda4074D3",
-      "swapCallData": "20447233",
-      "minProfitQuote": "0.0001",
-      "minProfitBase": "0.0001"
+      "keeperType": "uniswapV3",
+      "description": "pt-wstETH-26jun2025/weth",
+      "address": "0x856e0317130F468d2bcd104b42B82337300765b0",
+      "flashLoanPools": ["0x641c00a822e8b671738d32a431a4fb6074e5c79d"],
+      "minProfitQuote": "0.001",
+      "minProfitBase": "0.001",
+      "swapCallData": "20447233"
+    },
+    {
+      "keeperType": "uniswapV3",
+      "description": "pt-rETH-26jun2025/weth",
+      "address": "0xC8C1CdD42D02eaF4F775eaF9f4b4a37a5272118d",
+      "flashLoanPools": ["0x641c00a822e8b671738d32a431a4fb6074e5c79d"],
+      "minProfitQuote": "0.001",
+      "minProfitBase": "0.001",
+      "swapCallData": "20447233"
     }
   ]
 }
